--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1891,7 +1891,7 @@ html {
 }
 
 .product-details img {
-    margin: 0.3rem;
+    margin: 0.3rem 0;
     cursor: pointer;
     transition: transform 0.5s ease-in-out;
     -webkit-transition: transform 0.5s ease-in-out;
@@ -2809,19 +2809,19 @@ sup.required {
     align-items: center;
 }
 .ribbon {
-    width: 100vw;
+    max-width: 100vw;
 }
 .ribbonImage {
-    height: 240px;
-    display: inline-block;
+    max-height: 240px;
     position: relative;
-    left: 50vw;
+    left: 50%;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
     object-fit: contain;
+    width: 100%;
 }
 
 @media (max-width: 1200px) {
@@ -2833,4 +2833,52 @@ sup.required {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+.video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+/* pop up css */
+.popUp {
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popUpContent {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.popUpClose {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.popUpClose:hover,
+.popUpClose:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
