--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2847,38 +2847,4 @@ sup.required {
     width: 100%;
     position: absolute;
 }
-
-/* pop up css */
-.popUp {
-    position: fixed;
-    z-index: 9999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.popUpContent {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
-.popUpClose {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.popUpClose:hover,
-.popUpClose:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
+/*  */
