--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,9 @@
 .grey-bg {
     background: #fff !important;
 }
+.text-theme-color {
+color: #dd6310;
+}
 
 h1,
 h2,
@@ -2866,3 +2869,62 @@ sup.required {
     position: absolute;
 }
 /*  */
+
+
+/*
+**************
+*  Post Card 
+***************
+*/
+.post-card {
+    background-color: #fff;
+    transition: all 0.5s ease;
+}
+
+/* .post-card:hover {
+    transform: translateY(-10px);
+} */
+
+.post-card:hover img {
+    transform: scale(1.1);
+}
+
+.post-card .image-wrapper {
+    text-align: center;
+    position: relative;
+    height: 0;
+    padding-bottom: calc(100% / (16 / 9));
+    overflow: hidden;
+}
+
+.post-card .image-wrapper > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.8s ease;
+}
+
+.post__title {
+    font-size: 1.2rem;
+    line-height: 1.5;
+}
+
+.post__title a {
+    color: #dd6310;
+    text-decoration: none;
+}
+.post__title a:hover {
+    text-decoration: underline;
+}
+
+
+/* Unstyled link */
+a.link-unstyled {
+    text-decoration: none;
+}
+a.link-unstyled:hover {
+    text-decoration: underline;
+}
