--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1893,6 +1893,7 @@ html {
     -moz-transition: transform 0.5s ease-in-out;
     -ms-transition: transform 0.5s ease-in-out;
     -o-transition: transform 0.5s ease-in-out;
+    height: 5rem;
 }
 
 .product-details .img-item:nth-child(1),
@@ -2835,19 +2836,26 @@ sup.required {
     align-items: center;
 }
 .ribbon {
-    max-width: 100vw;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
 }
 .ribbonImage {
     max-height: 240px;
     position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    -o-transform: translateX(-50%);
-    object-fit: contain;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
 @media (max-width: 1200px) {
