--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -34,10 +34,6 @@ h5 {
     padding: 80px 0;
     margin-bottom: 70px;
     color: white;
-    /* padding: 15px 0;
-background: #f3f5fa;
-min-height: 40px;
-margin-top: 72px; */
 }
 
 .breadcrumbs h2 {
@@ -83,15 +79,6 @@ margin-top: 72px; */
     color: #4668a2;
     content: "/";
 }
-
-/* .banner{
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(40, 58, 90, 0.6)), url("https://images.unsplash.com/photo-1602052577122-f73b9710adba?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGxhYm9yYXRvcnl8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80") fixed center center;
-  background-size: cover;
-  padding: 150px 0;
-  margin-bottom: 70px;
-  color: white;
-  object-fit: fill;
-} */
 
 .banner {
     margin: 0 0 70px 0;
@@ -203,9 +190,9 @@ margin-top: 72px; */
 
 body {
     font-family: Roboto, sans-serif;
-    font-size: 15px;
+    font-size: 16px;
     background: #fff;
-    color: #777;
+    color: #22324a;
     line-height: 1.42857143;
     -webkit-overflow-scrolling: touch;
     -webkit-font-smoothing: antialiased;
@@ -534,7 +521,7 @@ html {
     border-radius: 3px;
 }
 
-.banner-slogon {
+/* .banner-slogon {
     margin: 20px 0 80px 0;
 }
 
@@ -553,7 +540,29 @@ html {
     height: 100%;
     background-color: #dd6310;
     width: 5px;
-}
+} */
+/* Header Intro slogan */
+blockquote.slogan {
+    background: #f9f9f9;
+    border-left: 10px solid #dd6310;
+    margin: 1.5em 10px;
+    padding: 2.5em 20px;
+    quotes: "\201C""\201D""\2018""\2019";
+  }
+  blockquote.slogan:before {
+    color: #dd6310;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+  }
+  blockquote.slogan p {
+    display: inline-block;
+    padding: 20px 10px;
+    font-size: 18px;
+  }
+  /* About section homepage */
 .about-hollows {
     margin: 0 0 80px 0;
 }
@@ -626,7 +635,6 @@ html {
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: start;
-    font-size: 14px;
     border-bottom: 1px solid transparent;
 }
 
@@ -642,7 +650,6 @@ html {
 }
 
 .about-hollows p {
-    font-size: 14px;
     text-align: justify;
     font-weight: 400;
     line-height: 1.8em;
@@ -761,7 +768,6 @@ html {
 
 .team .member p {
     margin: 10px 0 0 0;
-    font-size: 14px;
     text-align: center;
 }
 
@@ -847,9 +853,9 @@ html {
 }
 
 .service .service-box .service-box-inner span {
-    color: #b0c3d2;
+    color: #f47d34;
     padding: 20px;
-    background: #fffafa;
+    background: #ffebde;
     border-radius: 50%;
     font-size: 50px;
 }
@@ -857,7 +863,7 @@ html {
 .service .service-box .service-box-inner h5 {
     margin-top: 20px;
     font-size: 18px;
-    color: #a1c4bc;
+    color: #22324a;
 }
 
 .service .service-box .service-box-inner p {
@@ -2882,10 +2888,10 @@ carousel-inner > .item > img,
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.25);
 }
 .hero-slider .overlay h5 {
-    font-size: 4.5rem;
+    font-size: 2.5rem;
     font-weight: bolder;
     font-family: "Titillium Web", sans-serif;
 }
@@ -2897,6 +2903,9 @@ carousel-inner > .item > img,
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+}
+.carousel-control-next, .carousel-control-prev{
+width: auto !important;
 }
 .testimonial span {
     color: #fefefe;
